RESOLVED FIXED145926
Fix the build when the PICTURE_SIZES flag is off
https://bugs.webkit.org/show_bug.cgi?id=145926
Summary Fix the build when the PICTURE_SIZES flag is off
Yoav Weiss
Reported 2015-06-12 05:11:06 PDT
Fix the build when the PICTURE_SIZES flag is off
Attachments
Patch (1.31 KB, patch)
2015-06-12 05:12 PDT, Yoav Weiss
no flags
Yoav Weiss
Comment 1 2015-06-12 05:12:23 PDT
Csaba Osztrogonác
Comment 2 2015-06-12 05:28:27 PDT
Comment on attachment 254794 [details] Patch It fixed the build, thanks, r=me.
WebKit Commit Bot
Comment 3 2015-06-12 06:17:45 PDT
Comment on attachment 254794 [details] Patch Clearing flags on attachment: 254794 Committed r185501: <http://trac.webkit.org/changeset/185501>
WebKit Commit Bot
Comment 4 2015-06-12 06:17:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.