Fix the build when the PICTURE_SIZES flag is off https://bugs.webkit.org/show_bug.cgi?id=145926

Reviewed by Csaba Osztrogonác.

No new tests since there's no functionality change.

* html/parser/HTMLPreloadScanner.cpp: Remove the guard around the definition of m_sizesAttribute.


Canonical link: https://commits.webkit.org/163966@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185501 268f45cc-cd09-0410-ab3c-d52691b4dbfc