Source/WebCore/html/parser/HTMLPreloadScanner.cpp
@@ -235,9 +235,7 @@ private:
     TagId m_tagId;
     String m_urlToLoad;
     String m_srcSetAttribute;
-#if ENABLE(PICTURE_SIZES)
     String m_sizesAttribute;
-#endif
     String m_charset;
     String m_crossOriginMode;
     bool m_linkIsStyleSheet;
